<?xml version="1.0"?>
<package>
  <name>cse_190_assi_2</name>
  <version>0.0.0</version>
  <description>The cse_190_assi_2 package</description>

  <maintainer email="srsivara@todo.todo">SAKTHI</maintainer>


  <license>TODO</license>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
